# python_workshop

./: .gitignore  README.md  into_to_python_1.ipynb  into_to_python_1_the_basics.ipynb  into_to_python_2.ipynb  into_to_python_2_deeper_dive.ipynb  intro_to_python2.ipynb  intro_to_python_3.ipynb  pyproject.toml  pytest.ini  slides.txt
test/: test_list.py  test_persistent_list.py
todo_list/: list.py  list_http_bodies.py  log_args.py  persistent_list.py
