[tool.poetry]
name = "python_workshop"
version = "0.1.0"
description = "Python Workshop from basics to advance"
authors = ["Tanay PrabhuDesai <tanayseven@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
numexpr = "^2.7.1"
numba = "^0.48.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
